<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.LoginActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="299dp"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        app:layout_constraintBottom_toTopOf="@id/ivAirbus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivAirbus"
        android:layout_width="386dp"
        android:layout_height="405dp"
        android:src="@drawable/airbus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/border_edittext2"
        android:hint="@string/hint_login"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/border_edittext2"
        android:hint="@string/hint_password"
        android:inputType="numberPassword"
        android:paddingStart="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:layout_editor_absoluteX="25dp" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/black"
        android:text="@string/remember_me"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.252" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_edittext"
        android:letterSpacing="0.1"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.407" />


</androidx.constraintlayout.widget.ConstraintLayout>